# ckanext-search-schema

./: README.md  pyproject.toml  requirements.txt  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/search_schema/: adapters.py  cli.py  const.py  exceptions.py  facades.py  helpers.py  interfaces.py  plugin.py  types.py  views.py
ckanext/search_schema/assets/: script.js  webassets.yml
ckanext/search_schema/logic/: action.py  auth.py  schema.py  validators.py
ckanext/search_schema/tests/: test_helpers.py  test_plugin.py  test_views.py
ckanext/search_schema/tests/logic/: test_action.py  test_auth.py  test_validators.py
