[metadata]
name = ckanext-search-schema
version = 0.1.0
description = An extension to manage CKAN search engine schema
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mutantsan/ckanext-search-schema
author = Oleksandr Cherniavskyi
author_email = mutantsan@gmail.com
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN SOLR search schema

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             search_schema = ckanext.search_schema.plugin:SearchSchemaPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/search_schema/i18n/ckanext-search_schema.pot
width = 80

[init_catalog]
domain = ckanext-search_schema
input_file = ckanext/search_schema/i18n/ckanext-search_schema.pot
output_dir = ckanext/search_schema/i18n

[update_catalog]
domain = ckanext-search_schema
input_file = ckanext/search_schema/i18n/ckanext-search_schema.pot
output_dir = ckanext/search_schema/i18n
previous = true

[compile_catalog]
domain = ckanext-search_schema
directory = ckanext/search_schema/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
